Added labels for college, dates, and major being hovered over

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="visualization.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <!-- Our d3.js visualization will appear in #chart -->
       <div id="chart-engineering" style="display: inline-block"></div>
       <div id="chart-las" style="display: inline-block"></div>
