Added CSS. Centered sliders and graphs. Changed fonts. Implemented site fade-in

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Base template for simple d3.js visualizations</title>
-    <link rel="stylesheet" href="style.css" />
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -17,6 +17,8 @@
 
     <!-- Our visualization code -->
     <script src="visualization.js"></script>
+
+    <link rel="stylesheet" type = "text/css" href="style.css" />
   </head>
   <body>
     <div class="container-fluid">
