--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="bg-right"></div>
       <div class = "jumbotron">
           <h1>UIUC Major Populations Over Time</h1>
-
+          <p><span class = "author"> By Ethan Lord &amp; Ishaan Sehgal</span></p>
       </div>
       <div class="container-fluid">
         <div class = "charts">
