--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>UIUC Majors Over Time</title>
+    <title>UIUC Majors Population Timeline</title>
     <link rel="stylesheet" type = "text/css" href="style.css" />
 
     <!-- Bootstrap CSS -->
@@ -25,7 +25,7 @@
     <div id="bg-left"></div>
       <div id="bg-right"></div>
       <div class = "jumbotron">
-          <h1>UIUC Major Populations Over Time</h1>
+          <h1>UIUC Majors Population Timeline</h1>
           <p><span class = "author"> By Ethan Lord &amp; Ishaan Sehgal</span></p>
       </div>
       <div class="container-fluid">
@@ -40,9 +40,7 @@
           <div id="chart-fine-applied-arts" style="display: inline-block"></div>
           <div id="chart-media" style="display: inline-block"></div>
         </div>
-        <div class = "slider">
-            <div id= "slider"></div>
-        </div>
+        <div id= "slider"></div>
       </div>
   </body>
 
