Added basic tooltips with more data

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- d3.js -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
+    <script src="https://unpkg.com/d3-tip"></script>
 
     <!-- Our visualization code -->
     <script src="visualization.js"></script>
