--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
           <div id="chart-fine-applied-arts" style="display: inline-block"></div>
           <div id="chart-media" style="display: inline-block"></div>
         </div>
-        <div id= "slider"></div>
+        <div id= "slider">
+                <div id= "sliderYears">  </div>
+
+        </div>
+
+
+
+
       </div>
   </body>
 
