--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>UIUC Majors Population Timeline</title>
+    <title>UIUC Undergraduate Majors Timeline</title>
     <link rel="stylesheet" type = "text/css" href="style.css" />
 
     <!-- Bootstrap CSS -->
@@ -26,7 +26,7 @@
     <div id="bg-left"></div>
       <div id="bg-right"></div>
       <div class = "jumbotron">
-          <h1>UIUC Majors Population Timeline</h1>
+          <h1>UIUC Undergraduate Majors from 1980 to 2018</h1>
           <p><span class = "author"> By Ethan Lord &amp; Ishaan Sehgal</span></p>
       </div>
       <div class="container-fluid">
