Working dynamic title and more data in tooltip

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>UIUC Undergraduate Majors Timeline</title>
+    <title>UIUC Undergraduate Majors Over Time</title>
     <link rel="stylesheet" type = "text/css" href="style.css" />
 
     <!-- Bootstrap CSS -->
@@ -26,7 +26,7 @@
     <div id="bg-left"></div>
       <div id="bg-right"></div>
       <div class = "jumbotron">
-          <h1>UIUC Undergraduate Majors from 1980 to 2018</h1>
+          <h1 class = "jumbotron-title">UIUC Undergraduate Majors from 1980 to 2018</h1>
           <p><span class = "author"> By Ethan Lord &amp; Ishaan Sehgal</span></p>
       </div>
       <div class="container-fluid">
@@ -42,13 +42,8 @@
           <div id="chart-media" style="display: inline-block"></div>
         </div>
         <div id= "slider">
-                <div id= "sliderYears">  </div>
-
+        <div id= "sliderYears">  </div>
         </div>
-
-
-
-
       </div>
   </body>
 
