Fixed slider formatting with dates at sides

--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
           <div id="chart-fine-applied-arts" style="display: inline-block"></div>
           <div id="chart-media" style="display: inline-block"></div>
         </div>
-        <div id= "slider">
-        <div id= "sliderYears">  </div>
+        <div id= "slider-container">
+          <div id= "sliderStartYear"> </div>
+          <div id= "slider"> </div>
+          <div id= "sliderEndYear"> </div>
         </div>
       </div>
   </body>
